--- a/application.html
+++ b/application.html
@@ -3,9 +3,12 @@
 <head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>APPLICATION</title>
+    <style>
+        body {background-image: url(aine.jpg);}
+    </style>
 </head>
-<body style="background-color: aqua;">
+<body>
 <a class="navbar">
 <a href="home.html">Home</a>
 <a href="lucyfoundation.html">About</a>
