--- a/home.html
+++ b/home.html
@@ -7,6 +7,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
   rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMHjY6hW+ALEwIH" 
   crossorigin="anonymous">
+  <style>
+    body{
+      background-image: url(aine.jpg);
+    }
+  </style>
+</div>
 
 </head>
   <body>
@@ -17,13 +23,13 @@
     <a href="application.html">Form</a>
     </div>
     <br>
-    <div>
-            <img src="lucia.png" width="400" class="img-fluid rounded" alt="foundation1"><br>
-            <h5>Hi, My name is Ainembbabazi Lucia Rachel.</h5>
-            <p>I am a born again christian and a proud Ugandan.<em><b>And by God's grace I am the founder of Lucy Foundation,</b></em> a non-profitable organisation that aims at changing the lives of young chidren and the youth through support in education, health and in every way possible' </p>
-            <p>
-              I am passionate about helping others and working towards the cause of Jesus Christ. I have dedicated my life to the ministry and have worked with many people in Uganda. I am a strong believer in the power of love and compassion. I am also a loving and caring individual who loves to learn and grow. I am always open to new ideas and opportunities. I am a firm believer in the power of God to change and bring joy to people's lives. I am also a strong advocate for the importance of family and the importance of sharing the gospel with others. I am a loving, compassionate, and faithful individual who believes in the power of Jesus Christ to bring hope and peace to people's lives hence the LUCY FOUNDATION.
+    <div class="container">
+        <img src="lucia.png" width="400" alt="foundation1">
+        
+         <h5><p>Hi, My name is Ainembabazi Lucia Rachel.</p></h5>
+         <p> I am a born again christian and a proud Ugandan.<em><b>And by God's grace I am the founder of Lucy Foundation,</b></em>a non-profitable organisation that aims at changing the lives of young chidren and the youth through support in education, health and in every way possible.I am passionate about helping others and working towards the cause of Jesus Christ. I have dedicated my life to the ministry and have worked with many people in Uganda. I am a strong believer in the power of love and compassion. I am also a loving and caring individual who loves to learn and grow. I am always open to new ideas and opportunities. I am a firm believer in the power of God to change and bring joy to people's lives. I am also a strong advocate for the importance of family and the importance of sharing the gospel with others. I am a loving, compassionate, and faithful individual who believes in the power of Jesus Christ to bring hope and peace to people's lives hence the LUCY FOUNDATION. 
             </p>
+</div>
 </div>
       <h2>Contact Information.</h2>
       <p>Email:  <a href="mailto:ainembabaziluciarachel02.gmail.com"></a>ainembabaziluciarachel02.gmail.com</p>
