--- a/lucyfoundation.html
+++ b/lucyfoundation.html
@@ -7,8 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
      rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
+    <style>
+      body{
+        background-color: hotpink;
+        color: white;
+      }
+    </style>
     </head>
-<body style="background-color:hotpink;">
+<body>
   <div class="navbar">
     <a href="home.html">Home</a>
     <a href="lucyfoundation.html">About</a>
