--- a/lucyfoundation.html
+++ b/lucyfoundation.html
@@ -9,8 +9,7 @@
     crossorigin="anonymous">
     <style>
       body{
-        background-color: hotpink;
-        color: white;
+        background-image: url(aine.jpg);
       }
     </style>
     </head>
@@ -34,16 +33,16 @@
       </p>
     </p>
       <div class="card mb-3" style="max-width: 800px;">
-        <div class="row g-0" style="background-color:hotpink;"> 
-          <div class="col-md-4">
+        <div class="row g-0">
+          <div class="col-md-4" style="background-color: black;">
             <img src="foundation1.jpeg" width="200"class="img-fluid rounded" alt="foundation1"><br>
             <br>
             <img src="foundation9.jpeg"width="200" class="img-fluid rounded" alt="foundation9"><br>
             <br>
             <img src="foundation8.jpeg" width="200"  class="img-fluid rounded" alt="foundation8"><br>
           </div>
-          <div class="col-md-8" style="background-color:hotpink;" >
-            <div class="card-body">
+          <div class="col-md-8">
+            <div class="card-body" style="background-image: url(aine.jpg);">
               <h5 class="card-title">GOALS</h5>
               <p class="card-text"></p>
                 <ul>
@@ -65,17 +64,15 @@
       </div>
     </div>
       <div class="card-group">
-        <div class="card" style="background-color:hotpink;">
-          <img src="mission.jpeg" class="card-img-top" alt="...">
-          <div class="card-body" style="color: black;">
-            <h5 class="card-title">MISION.</h5>
-            <p class="card-text">Bring contageous joy and hope to children, youths and the community at large.</p>
+        <div class="card">
+          <div class="card-body" style="background-color: black;">
+            <h5 class="card-title" style="color: aliceblue;">MISION.</h5>
+            <p class="card-text" style="color: aliceblue;">Bring contageous joy and hope to children, youths and the community at large.</p>
             <p class="card-text"><small class="text-body-secondary"></small></p>
           </div>
         </div>
         <div class="card" style="background-color: white;">
-          <img src="vision.jpeg" class="card-img-top" alt="...">
-          <div class="card-body" style="background-color:hotpink;">
+          <div class="card-body" style="background-color: gold;">
             <h5 class="card-title">VISION.</h5>
             <p class="card-text" style="color: m;">
                 To create a community where every child, every family, and every individual feels safe, loved, and valued.
@@ -83,9 +80,8 @@
             <p class="card-text"><small class="text-body-secondary"></small></p>
           </div>
         </div>
-        <div class="card" style="background-color: hotpink;">
-          <img src="core values.jpeg" class="card-img-top" alt="...">
-          <div class="card-body">
+        <div class="card">
+          <div class="card-body" style="background-color: crimson;">
             <h5 class="card-title">CORE VALUES.</h5>
             <p class="card-text">
                 <ul>
